# code-jam-12

./: .gitignore  README.md  __init__.py  config.py  pyproject.toml
calm-calatheas/: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  Dockerfile  LICENSE.txt  README.md  devenv.nix  mkdocs.yaml  package-lock.json  package.json  pyproject.toml
calm-calatheas/.devcontainer/: devcontainer.json  playwright.sh  pre-commit.sh
calm-calatheas/.github/workflows/: lint.yaml  publish-docs.yaml
calm-calatheas/app/: index.html  main.py  manifest.json  pyscript.toml
calm-calatheas/app/frontend/: app.py
calm-calatheas/app/frontend/base/: __init__.py  component.py  service.py
calm-calatheas/app/frontend/components/: __init__.py  camera.py  description.py  description_dropdown.py  footer.py  header.py  loading_caption_model.py  pokemon.py  theme.py
calm-calatheas/app/frontend/models/: __init__.py  pokemon_description.py
calm-calatheas/app/frontend/services/: __init__.py  camera.py  caption.py  database.py  description.py  pokemon.py  reader.py  theme.py
calm-calatheas/app/styles/: theme.css
calm-calatheas/calm_calatheas/: __init__.py  __main__.py  app.py  logger.py  model.py  settings.py
calm-calatheas/docs/: index.md  setup-guide.md  user-guide.md
calm-calatheas/docs/assets/design/: overview.drawio
calm-calatheas/docs/code/: backend.md  frontend.md  index.md
calm-calatheas/docs/contributor-guide/: development-environment.md  documentation.md  index.md  version-control.md
calm-calatheas/docs/design/: backend.md  design-goals.md  index.md  system-overview.md  web-app.md
calm-calatheas/tests/: conftest.py  docker-compose.yaml  test__calm_calatheas.py
calm-calatheas/typings/: js.pyi  pyscript.pyi  transformers_js.pyi
cool-cacti/: .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.txt  README.md  app.py  pyproject.toml
cool-cacti/horizons_data/: planets.json
cool-cacti/static/: credits.txt  lore.txt  pyscript.json  styles.css
cool-cacti/static/scripts/: asteroid.py  audio.py  common.py  consolelogger.py  controls.py  debris.py  game.py  overlay.py  player.py  scene_classes.py  scene_descriptions.py  solar_system.py  spacemass.py  sprites.py  stars.py  window.py
cool-cacti/templates/: index.html
cool-cacti/tools/: fetch_horizons.py  generate_pyscript_config.py  make_spritesheets.py  process_recycle_sprites.py
cool-cacti/tools/horizons_api/: __init__.py  client.py  exceptions.py  models.py  parsers.py
daring-daffodils/: Makefile  README.md  app.py  pyproject.toml  setup.ps1
daring-daffodils/browser_extension/: content.js  main.py  manifest.json  popup.html
daring-daffodils/browser_extension/runtime/: setup.py
daring-daffodils/browser_extension/static/: easter_eggs.json
daring-daffodils/browser_extension/utils/: __init__.py  easter_eggs.py  fake_cursor.py  make_highlights.py  move_and_click.py  toast.py
daring-daffodils/mobile_page/: index.html  mobile_page.py
grand-gardenias/: pyproject.toml
heavenly-hostas/: .gitattributes  .gitignore  Dockerfile.backend  README.md  docker-compose.yaml  pyproject.toml  set_up_supabase_volumes.sh
heavenly-hostas/.github/workflows/: data.yaml  static-deploy.yaml
iridescent-ivies/: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  dev.py  pyproject.toml  requirements.txt
iridescent-ivies/src/: index.html
iridescent-ivies/src/api/: __init__.py  auth_session.py
iridescent-ivies/src/core/: __init__.py  functions.py  parser.py  setup.py
iridescent-ivies/src/ui/: __init__.py  auth_modal.py  frontend.py  image_modal.py
iridescent-ivies/src/web/: boot.js  styles.css
monumental-monsteras/: .gitignore  LICENSE.txt  README.md  pyproject.toml
monumental-monsteras/src/: color_style.py  config.py  homepage.py  main.py  wpm_tester.py
peppy-poppies/: .env.example  .gitignore  README.md  build.py  captcha.Dockerfile  cmd.md  demo.Dockerfile  docker-compose.yml  js.pyi  pylock.toml  pyproject.toml
peppy-poppies/captcha_data/: OFL.txt  question_set.json
peppy-poppies/crypto/: _test.py  jwt_generate.py  key.py
peppy-poppies/docs-assets/: LICENSE.md
peppy-poppies/frontend/captcha/: __init__.py  captcha.html  captcha.py  captcha_handler.js  captcha_handler.py  parse.py  pyscript.toml  runner.js
peppy-poppies/frontend/demo/: app.js  index.html  styles.css
peppy-poppies/server/backend/: main.py  models.py
peppy-poppies/server/backend/controller/: auth.py
peppy-poppies/server/backend/lib/: config.py  dependencies.py  services.py  utils.py
peppy-poppies/server/backend/schema/: auth.py
peppy-poppies/server/captcha/: main.py  models.py
peppy-poppies/server/captcha/controller/: challenge.py
peppy-poppies/server/captcha/lib/: config.py  dependencies.py  services.py  utils.py
peppy-poppies/server/captcha/schema/: challenge.py  questions.py
src/: config.py  homepage.py  input_method_frame.py  input_method_proto.py  input_view.py  main.py  wpm_tester.py
src/audio_style_input/: __init__.py
src/code_jam_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/color_mixer_input/: __init__.py
src/platformer_input/: __init__.py  platformer_constants.py  platformer_scene_cmp.py  platformer_simulation.py
src/rpg_text_input/: __init__.py
src/sample_input_method/: __init__.py
tubular-tulips/: pyproject.toml
witty-wisterias/: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  image_server.py  pyproject.toml  requirements.txt
witty-wisterias/.github/workflows/: review.yaml
witty-wisterias/witty_wisterias/: .gitignore  __main__.py  rxconfig.py
witty-wisterias/witty_wisterias/backend/: backend.py  cryptographer.py  database.py  exceptions.py  message_format.py  user_input_handler.py
witty-wisterias/witty_wisterias/frontend/: app_config.py  frontend.py
witty-wisterias/witty_wisterias/frontend/components/: chat_bubble.py  chatapp.py  create_chat.py  image_button.py  sidebar.py  text_button.py  tos_accept_form.py  user_info.py
witty-wisterias/witty_wisterias/frontend/states/: chat_state.py  progress_state.py  webcam_state.py
(+2 files in other folders)
