[project]
# This section contains metadata about your project.
# Don't forget to change the name, description, and authors to match your project!
name = "code-jam-soon-to-be-awesome-project"
description = "no idea yet :)"
authors = [
    { name ="https://github.com/fluffy-marmot", email="10621013+fluffy-marmot@users.noreply.github.com"},
    { name ="https://github.com/Prorammer-4090", email="email@mail.com"},
    { name ="https://github.com/TheRatLord", email="email@mail.com"},
    { name ="https://github.com/spirledaxis", email="email@mail.com"},
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
]

[dependency-groups]
# This `dev` group contains all the development requirements for our linting toolchain.
# Don't forget to pin your dependencies!
# This list will have to be migrated if you wish to use another dependency manager.
dev = [
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pre-commit~=4.2.0",
    "ruff~=0.12.2",
]

[tool.ruff]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
# The original reason for this limit was a standard vim terminal is only 79 characters,
# but this doesn't really apply anymore.
line-length = 119
# Target Python 3.12. If you decide to use a different version of Python
# you will need to update this value.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true
# Show applied fixes.
show-fixes = true
# The directory containing the source code. If you choose a different project layout
# you will need to update this value.
src = ["src"]

[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
fixable = ["I", "F401"] # I = Sorts imports, F401 = Deletes unused imports
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Trailing comma rule, not compatible with formatter
    "COM812",
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
    # Security
    "S311" 
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
